--- a/inline-edit-textfield.html
+++ b/inline-edit-textfield.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- include bootstrap CSS in head section-->
 <head>
   <title>Client-side Inline Edit (Text Field)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -42,8 +43,9 @@
 	   $label.removeClass('d-none');
 	   $('#editButton').removeClass('d-none');
 	   $('#cancelButton').addClass('d-none');
+	   //post data to server to save the new value
 	});
-        $input.on('keyup', function(event) {
+	$input.on('keyup', function(event) {
           if (event.keyCode === 13) {
             var newValue = $input.val();
             $label.text(newValue);
@@ -51,6 +53,7 @@
             $label.removeClass('d-none');
             $('#editButton').removeClass('d-none');
             $('#cancelButton').addClass('d-none');
+	    //post data to server to save the new value
           }
         });
       });
