--- a/inline-edit-dropdown.html
+++ b/inline-edit-dropdown.html
@@ -11,9 +11,9 @@
       <span id="labelField">Option 1</span>
       <button id="editButton" class="btn btn-primary ml-2">Edit</button>
       <select id="editableField" class="form-control d-none">
-        <option value="option1">Option 1</option>
-        <option value="option2">Option 2</option>
-        <option value="option3">Option 3</option>
+        <option value="Option 1">Option 1</option>
+        <option value="Option 2">Option 2</option>
+        <option value="Option 3">Option 3</option>
       </select>
       <div class="mt-2">
         <button id="cancelButton" class="btn btn-secondary d-none ml-6">Cancel</button>
